--- a/frontend_project/src/components/About/About.css
+++ b/frontend_project/src/components/About/About.css
@@ -1,31 +1,32 @@
-.about{
-    display: flex;
-    flex-direction: column;
-    flex: 1 1 auto;
-    max-width: 1000px;
-    margin: 50px auto 0px auto;
+.about {
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 auto;
+  max-width: 1000px;
+  margin: 50px auto 0px auto;
 }
 
 .about p {
-    font-size: 18px;
+  font-size: 18px;
 }
 
-@media (min-width: 700px) and (max-width: 1400px) { 
-    .about {
-        max-width: 500px;
-    }
+@media (min-width: 700px) and (max-width: 1400px) {
+  .about {
+    max-width: 500px;
+  }
 }
 
-@media (min-width: 480px) and (max-width: 700px) { 
-    .about {
-        max-width: 350px;
-    }
+@media (min-width: 480px) and (max-width: 700px) {
+  .about {
+    max-width: 350px;
+  }
 }
 
-
-@media (min-width: 260px) and (max-width: 480px) { 
-    .about, .about p, .about ul {
-        max-width: 200px;
-        font-size: 0.8em;
-    }
+@media (min-width: 260px) and (max-width: 480px) {
+  .about,
+  .about p,
+  .about ul {
+    max-width: 200px;
+    font-size: 0.8em;
+  }
 }
