--- a/frontend_project/src/components/Footer/Footer.css
+++ b/frontend_project/src/components/Footer/Footer.css
@@ -1,20 +1,21 @@
-.footer{
-background-color: rgb(48,48,48);
-display: flex;
-justify-content: center;
-width: 100%;
+.footer {
+  background-color: rgb(48, 48, 48);
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
 
 .footer p {
-color: #fff;
-margin: 30px 0px 30px 0px;
-font-size: 18px;
+  color: #fff;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  font-size: 18px;
 }
 
-@media (min-width: 260px) and (max-width: 480px) { 
-    .footer p {
-        color: #fff;
-        margin: 30px 0px 30px 0px;
-        font-size: 0.8em;
-    }
+@media (min-width: 260px) and (max-width: 480px) {
+  .footer p {
+    color: #fff;
+    margin: 30px 0px 30px 0px;
+    font-size: 0.8em;
+  }
 }
