--- a/frontend_project/src/components/Header/Header.css
+++ b/frontend_project/src/components/Header/Header.css
@@ -1,45 +1,45 @@
-.header{
-    display: flex;
-    background-color: rgb(48,48,48);
-    width: 100%;
-    justify-content: center;
-    flex-wrap: wrap;
+.header {
+  display: flex;
+  background-color: rgb(48, 48, 48);
+  width: 100%;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
-.header ul{
-    display: flex;
-    list-style: none;
-    margin: 10px 10px 10px 0px;
+.header ul {
+  display: flex;
+  list-style: none;
+  margin: 10px 10px 10px 0px;
 }
 
-.navlink{
-    margin: 0px 35px 0px 0px;
-    color: rgba(255, 255, 255, 0.5);
-    font-size: 20px;
-    text-decoration: none;
+.navlink {
+  margin: 0px 35px 0px 0px;
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 20px;
+  text-decoration: none;
 }
 
-.navlink:hover{
-    text-decoration: none;
-    color: whitesmoke;
+.navlink:hover {
+  text-decoration: none;
+  color: whitesmoke;
 }
 
 .active {
-    color: white;
+  color: white;
 }
 
 .logo {
-    color: white;
-    font-size: 1.4em;
-    margin: 8px 10px 10px 0px;
+  color: white;
+  font-size: 1.4em;
+  margin: 8px 10px 10px 0px;
 }
 
-@media (min-width: 260px) and (max-width: 480px) { 
-    .navlink {
-        font-size: 0.8em;
-        margin: 0px 20px 0px 0px;
-    }
-    .logo {
-        margin-left: 5px;
-    }
+@media (min-width: 260px) and (max-width: 480px) {
+  .navlink {
+    font-size: 0.8em;
+    margin: 0px 20px 0px 0px;
+  }
+  .logo {
+    margin-left: 5px;
+  }
 }
