--- a/frontend_project/src/components/Main/Main.css
+++ b/frontend_project/src/components/Main/Main.css
@@ -1,75 +1,73 @@
-.main2{
-padding: 80px 0px 100px 0px;
-height: 100vh;
-display: flex;
-flex-direction: column;
-align-items: center;
+.main2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1 1 auto;
+  margin: 70px auto 0px auto;
 }
 
-.main2 a:hover{
-    color: #fff;
-    background-color: #0864ee;
-    border-color: #0a58ca
+.main2 a:hover {
+  color: #fff;
+  background-color: #0864ee;
+  border-color: #0a58ca;
 }
 
-.main2_block1{
-    display: flex;
-    justify-content: space-between;
-    width: 30%;
-    flex-wrap: wrap;
-    margin: 0px 0px 70px 0px;
+.main2_block1 {
+  display: flex;
+  justify-content: space-between;
+  width: 30%;
+  flex-wrap: wrap;
+  margin: 0px 0px 70px 0px;
 }
 
-.main2 a{
-    width: 45%;
-    padding: 10px 20px 10px 20px;
-    background-color: rgb(68, 129, 243);
-    text-decoration: none;
-    text-align: center;
-    color: #fff;
-    border-radius: 10px;
+.main2 a {
+  width: 45%;
+  padding: 10px 20px 10px 20px;
+  background-color: rgb(68, 129, 243);
+  text-decoration: none;
+  text-align: center;
+  color: #fff;
+  border-radius: 10px;
 }
 
-.main2_block2{
-    display: flex;
-    flex-direction: column;
-    width: 65%;
-    font-size: 18px;
+.main2_block2 {
+  display: flex;
+  flex-direction: column;
+  width: 65%;
+  font-size: 18px;
 }
 
-@media (min-width: 700px) and (max-width: 1400px) { 
-    .main2_block1{
-        width: 60%;
-    }
+@media (min-width: 700px) and (max-width: 1400px) {
+  .main2_block1 {
+    width: 60%;
+  }
 
-    .main2_block2{
-        width: 70%;
-    }
+  .main2_block2 {
+    width: 70%;
+  }
 }
 
-@media (min-width: 480px) and (max-width: 700px) { 
-    .main2_block1{
-        width: 70%;
-    }
+@media (min-width: 480px) and (max-width: 700px) {
+  .main2_block1 {
+    font-size: 0.9em;
+    width: 70%;
+  }
 
-    .main2_block2{
-        width: 80%;
-    }
+  .main2_block2 {
+    font-size: 0.9em;
+    width: 80%;
+  }
 }
 
-@media (min-width: 260px) and (max-width: 480px) { 
-    .main2_block1{
-        width: 80%;
-        font-size: 0.7em;
-        margin: 0px 0px 40px 0px;
-    }
+@media (min-width: 260px) and (max-width: 480px) {
+  .main2_block1 {
+    width: 80%;
+    font-size: 0.75em;
+    margin: 0px 0px 40px 0px;
+  }
 
-    .main2_block2{
-        width: 80%;
-        font-size: 0.7em;
-    }
-
-    .main2{
-        padding: 50px 0px 50px 0px;
-        }
+  .main2_block2 {
+    width: 80%;
+    font-size: 0.75em;
+  }
 }
